@@ -254,6 +254,7 @@ Included
 - Launchpad History fallback now also reads `report_card_v0.json`/`report_card.txt` to recover status/buckets/baseline when view-state metadata is incomplete.
 - Launchpad History now includes `Copy Details` to copy selected inline evidence summary text for ticket/share workflows.
 - Launchpad History now supports keyboard copy (`Ctrl+C`) from history list/details pane for faster evidence sharing.
+- Launchpad History details now include artifact fingerprint/digest and receipt digests (`safe_run_receipt.json`, `operator_receipt.json`) for quick cross-verification.
 - Ticket-pack regression coverage now enforces inclusion of adapter evidence artifacts (`analysis/capability_ledger_v0.json`, `analysis/adapter_summary_v0.json`, `analysis/adapter_findings_v0.json`) when present in run output.
 - Ticket-pack default extras now include `report_card_v0.json` so structured report data is always included in support bundles when available.
 - Ticket-pack summary now includes adapter evidence fields (`adapterEvidence`, `adapterClass`, `adapterId`, `adapterMode`, and capability counts) for faster support triage.
